--- a/src/app/components/home/emoticons/emoticons.css
+++ b/src/app/components/home/emoticons/emoticons.css
@@ -1,23 +1,23 @@
 .big-chip {
     display: inline-block;
-    height: 48px;
+    height: 56px;
     font-size: 14px;
     font-weight: 300;
-    color: rgba(0, 0, 0, 0.9);
-    line-height: 48px;
+    color: rgba(0, 0, 0, 0.75);
+    line-height: 56px;
     padding: 0 16px;
-    border-radius: 24px;
-    border: 1px solid rgba(0, 0, 0, 0.4);
+    border-radius: 28px;
     margin-bottom: 10px;
     margin-right: 10px;
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
 }
 
 .big-chip:hover {
-    font-weight: 400;
     cursor: pointer;
-    color: rgba(0, 0, 0, 0.95);
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    background-color: #DDD;
+    color: rgba(0, 0, 0, 1);
+    -webkit-box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.3);
 }
 
 .chip {
@@ -54,4 +54,8 @@
     outline: none;
     box-shadow: none;
     background: transparent;
+}
+
+#all-emoticons-title {
+    font-family: 'Josefin Sans', sans-serif;
 }
