--- a/src/app/components/home/emoticons/emoticons.html
+++ b/src/app/components/home/emoticons/emoticons.html
@@ -1,5 +1,4 @@
 <!-- Emoticons Section -->
-
 <div class="section">
     <div class="section center-align">
         <div *ngFor="let e of emoticonList | async" id="{{e.hash}}" class="big-chip"
@@ -12,7 +11,7 @@
     <h5 id="all-emoticons-title" class="center">all emoticons</h5>
     <div class="row">
         <div class="section center-align" id="tag-container">
-            <div class="chip chip-active" (click)="loadPopularEmoticons()">
+            <div class="chip" (click)="loadPopularEmoticons()">
                 Popular
             </div>
             <div *ngFor="let item of items | async" class="chip"
