--- a/src/app/components/home/emoticons/emoticons.html
+++ b/src/app/components/home/emoticons/emoticons.html
@@ -1,7 +1,7 @@
 <!-- Emoticons Section -->
 <div class="section">
     <div class="section center-align">
-        <div *ngFor="let e of emoticonList | async" id="{{e.hash}}" class="big-chip"
+        <div *ngFor="let e of emoticonList | async" class="big-chip"
              (click)="onEmoticonClick($event, e)">{{e.emoticon}}</div>
     </div>
 </div>
