--- a/src/styles.css
+++ b/src/styles.css
@@ -12,25 +12,13 @@
 }
 
 body {
-    position: relative;
-    padding-bottom: 2em;
     height: 100%;
     min-height: 100vh;
 }
 
 footer {
-    position: absolute;
-    font-size: 12px;
+    font-size: 1em;
     left: 0;
     right: 0;
     bottom: 0;
-}
-
-footer > .mat-toolbar {
-    background: #FFF;
-    font-size: 14px;
-}
-
-#rionlabs-logo {
-    font-family: 'Orbitron', sans-serif;
 }
